# drf-channels-react

./: Makefile  docker-compose.yml
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/apiv1/: consumers.py  routing.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  test.py
envs/: .env.backend.local
